# Blazingly-Fast-Discord-Client

./: .gitignore  Cargo.toml  README.md
src/: api.rs  main.rs  state.rs  ui.rs  websocket.rs
src/utils/: mod.rs  save_pretty_json.rs
src/websocket/: handle_connection.rs  handle_incomming_messages.rs  heartbeat.rs  mod.rs  sequence_tracker.rs  websocket.rs  writer_task.rs
src/websocket/load_initial_data/: get_client_username.rs  get_guilds.rs  get_private_channels.rs  load_initial_data.rs  mod.rs  send_identity.rs
ui/: app-window.slint
