[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.14.1"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
serde_json = "1.0"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"

[build-dependencies]
slint-build = "1.14.1"
